Fix navigation links and resolve merge conflicts in HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
+<!--body elements section-->
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
@@ -48,6 +50,7 @@
         </div>
     </nav>
 
+    <!--header section!-->
     <section class="d-flex justify-content-center align-items-center text-center"
         style="height: 100vh; background: url('assets/images/beautiful\ travel.png') no-repeat center center; background-size: cover;">
         <div>
@@ -58,6 +61,7 @@
         </div>
     </section>
 
+    <!--about us section-->
     <section id="about" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5"><span style="color: purple;">About Us</span></h2>
@@ -77,7 +81,7 @@
 
 
     </section>
-
+    <!--navbar section-->
 
     <section>
 
@@ -99,13 +103,15 @@
                 <div class="col-md-3 text-center">
                     <div class="card p-3">
                         <h5 class="card-title">Tour Package</h5>
-                        <p class="card-text">Explore our curated tour packages for unforgettable experiences.</p>
+                        <p class="card-text">Explore our curated tour packages for unforgettable experiences, please
+                            call 08002653595 for a quote</p>
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
                     <div class="card p-3">
                         <h5 class="card-title">Travel Insurance</h5>
-                        <p class="card-text">Secure your trips with our comprehensive travel insurance plans.</p>
+                        <p class="card-text">Secure your trips with our comprehensive travel insurance plans, please
+                            call 08002653595 for a quote</p>
                     </div>
     </section>
     <section id="summer-holiday" class="d-flex justify-content-center align-items-center text-center text-white"
@@ -115,6 +121,8 @@
 
         </div>
     </section>
+
+    <!--section testimonial-->
 
     <section>
 
@@ -151,6 +159,8 @@
 
 
     </section>
+
+    <!--footer section!-->
     <footer class="container-fluid">
         <div class="row">
             <div class="col-12">
