--- a/contact.html
+++ b/contact.html
@@ -32,15 +32,15 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Reservations</a>
+                        <a class="nav-link" href="reservations.html">Reservations</a>
                     </li>
                      
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact Us</a>
+                        <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
