--- a/reservations.html
+++ b/reservations.html
@@ -35,15 +35,15 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="reservations.html">Reservations</a>
+                        <a class="nav-link active" aria-current="page" href="reservations.html">Reservations</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
