Fixed icons in the index.html

--- a/index.html
+++ b/index.html
@@ -124,13 +124,12 @@
 
     <!--section testimonial-->
 
-    <section>
-
+    <section style="margin-bottom: 30px;"> <!-- Added margin-bottom -->
         <div class="container">
             <h2 class="text-center mb-5"><span style="color: purple;">Testimonials</span></h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card p-3">
+                    <div class="card p-3" style="min-height: 250px;">
                         <div class="card-body">
                             <p class="card-text">"Easy Travel made my vacation stress-free and enjoyable. The booking
                                 process was seamless, and the customer service was exceptional!"</p>
@@ -139,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card p-3">
+                    <div class="card p-3" style="min-height: 250px;">
                         <div class="card-body">
                             <p class="card-text">"I loved the tour package options! Everything was well-organized, and I
                                 had the best time exploring new destinations."</p>
@@ -148,37 +147,41 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card p-3">
+                    <div class="card p-3" style="min-height: 250px;">
                         <div class="card-body">
                             <p class="card-text">"Booking flights and accommodations through Easy Travel was so
                                 convenient. Highly recommend their services!"</p>
                             <h5 class="card-title text-end">- Emily R.</h5>
-
                         </div>
-
-
-
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!--footer section!-->
-    <footer class="container-fluid">
+    <footer class="container-fluid" style="background-color: purple; color: white; padding: 20px 0;">
         <div class="row">
-            <div class="col-12">
-                <p class="text-center">© 2025 Easy Travel. All Rights Reserved.</p>
+            <div class="col-12 text-center">
                 <div class="social-icons">
-                    <a href="https://facebook.com" target="_blank" title="Facebook">
+                    <a href="https://facebook.com" target="_blank" title="Facebook" style="color: white; margin: 0 10px;">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://twitter.com" target="_blank" title="Twitter">
+                    <a href="https://twitter.com" target="_blank" title="Twitter" style="color: white; margin: 0 10px;">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="https://linkedin.com" target="_blank" title="LinkedIn">
+                    <a href="https://linkedin.com" target="_blank" title="LinkedIn" style="color: white; margin: 0 10px;">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://x.com" target="_blank" title="x">
+                    <a href="https://x.com" target="_blank" title="X" style="color: white; margin: 0 10px;">
                         <i class="fab fa-x"></i>
                     </a>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>© 2025 Easy Travel. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
