--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 </nav>
 
 <section class="d-flex justify-content-center align-items-center text-center text-white"
-    style="height: 100vh; background: url('assets/images/beautiful travel.png') no-repeat center center; background-size: cover;">
+    style="height: 100vh; background: url('assets/images/nature.png') no-repeat center center; background-size: cover;">
     <div>
         <h1 class="display-4" style="color: red; font-weight: bold;">Welcome to Easy Travel</h1>
         <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you a great service.</p>
@@ -59,7 +59,16 @@
     <div class="container">
         <h2 class="text-center mb-5"><span style="color: purple;">About Us</span></h2>
         <p>
-            Easy Travel is dedicated to making your travel dreams a reality. With a passion for exploration and a commitment to excellence, we provide seamless travel experiences tailored to your unique needs.
+            <ul>
+                <li>Easy Travel is dedicated to making your travel dreams a reality.</li>
+                <li>With a passion for exploration and a commitment to excellence, we provide seamless travel experiences tailored to your unique needs.</li>
+                <li>Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of.</li>
+                <li>From flight bookings to accommodations and curated tour packages, we offer a one-stop solution for all your travel needs.</li>
+                <li>Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability.</li>
+                <li>At Easy Travel, we believe that every journey should be as memorable as the destination itself.</li>
+                <li>Let us take the stress out of planning so you can focus on creating unforgettable memories.</li>
+                <li>Your adventure begins with us!</li>
+            </ul>
             Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of. From flight bookings to accommodations and curated tour packages,
             we offer a one-stop solution for all your travel needs. Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability. At Easy Travel,
             we believe that every journey should be as memorable as the destination itself. Let us take the stress out of planning so you can focus on creating unforgettable memories. Your adventure begins with us!
@@ -67,23 +76,29 @@
     </div>
 </section>
 
-<footer>
-    <div>
-        <p class="text-center">© 2025 Easy Travel. All Rights Reserved.</p>
+<footer class="container-fluid" style="background-color: purple; color: white; padding: 20px 0;">
+    <div class="row">
+        <div class="col-12 text-center">
+            <div class="social-icons">
+                <a href="https://facebook.com" target="_blank" title="Facebook" style="color: white; margin: 0 10px;">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://twitter.com" target="_blank" title="Twitter" style="color: white; margin: 0 10px;">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://linkedin.com" target="_blank" title="LinkedIn" style="color: white; margin: 0 10px;">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://x.com" target="_blank" title="X" style="color: white; margin: 0 10px;">
+                    <i class="fab fa-x"></i>
+                </a>
+            </div>
+        </div>
     </div>
-    <div class="social-icons text-center">
-        <a href="https://facebook.com" target="_blank" title="Facebook" class="mx-2">
-            <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://twitter.com" target="_blank" title="Twitter" class="mx-2">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://linkedin.com" target="_blank" title="LinkedIn" class="mx-2">
-            <i class="fab fa-linkedin-in"></i>
-        </a>
-        <a href="https://x.com" target="_blank" title="x" class="mx-2">
-            <i class="fab fa-x"></i>
-        </a>
+    <div class="row">
+        <div class="col-12 text-center">
+            <p>© 2025 Easy Travel. All Rights Reserved.</p>
+        </div>
     </div>
 </footer>
 
