--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
     <!-- Hero Section -->
     <section class="d-flex justify-content-center align-items-center text-center text-white"
-        style="height: 100vh; background: url('assets/images/beautiful travel.png') no-repeat center center; background-size: cover;">
+        style="height: 100vh; background: url('assets/images/customer.gif') no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold;">Welcome to Easy Travel</h1>
             <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you a great service.
@@ -63,7 +63,7 @@
         <div class="container">
             <div class="card shadow p-4">
                 <h2 class="text-center mb-4" style="color: purple;">Contact Us</h2>
-                <p style="color: purple;">Feel free to reach out to us for any inquiries, feedback, or assistance—we’re here to help!</p>
+                <p style="color: purple;"><strong>Feel free to reach out to us for any inquiries, feedback, or assistance—we’re here to help!</strong></p>
                 
                 <form>
                     <div class="mb-3">
@@ -96,23 +96,31 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-        <div>
-            <p class="text-center">© 2025 Easy Travel. All Rights Reserved.</p>
+    <footer
+    
+    class="container-fluid" style="background-color: purple; color: white; padding: 20px 0;">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="social-icons">
+                    <a href="https://facebook.com" target="_blank" title="Facebook" style="color: white; margin: 0 10px;">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://twitter.com" target="_blank" title="Twitter" style="color: white; margin: 0 10px;">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://linkedin.com" target="_blank" title="LinkedIn" style="color: white; margin: 0 10px;">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://x.com" target="_blank" title="X" style="color: white; margin: 0 10px;">
+                        <i class="fab fa-x"></i>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="social-icons text-center">
-            <a href="https://facebook.com" target="_blank" title="Facebook" class="mx-2">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="https://twitter.com" target="_blank" title="Twitter" class="mx-2">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://linkedin.com" target="_blank" title="LinkedIn" class="mx-2">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="https://x.com" target="_blank" title="x" class="mx-2">
-                <i class="fab fa-x"></i>
-            </a>
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>© 2025 Easy Travel. All Rights Reserved.</p>
+            </div>
         </div>
     </footer>
 
