--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <a class="navbar-brand" href="#">
             <img src="assets/images/logo-easy-travel.jpg" alt="Easy Travel Logo" width="30" height="30"
                 class="d-inline-block align-text-top">
-            Easy Travel
+            <span style="color: purple;">Easy Travel</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
     style="height: 100vh; background: url('assets/images/nature.png') no-repeat center center; background-size: cover;">
     <div>
         <h1 class="display-4" style="color: red; font-weight: bold;">Welcome to Easy Travel</h1>
-        <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you a great service.</p>
+        <p class="lead" style="color: red; font-weight: bold;">We create unforgettable travel experiences tailored to your dreams</p>
         <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
     </div>
 </section>
@@ -58,16 +58,17 @@
 <section id="about-us" class="py-5">
     <div class="container">
         <h2 class="text-center mb-5"><span style="color: purple;">About Us</span></h2>
+        <h3 class="text-center"><span style="color: purple;">We create unforgettable travel experiences tailored to your dreams</span></h3>
         <p>
             <ul>
-                <li>Easy Travel is dedicated to making your travel dreams a reality.</li>
-                <li>With a passion for exploration and a commitment to excellence, we provide seamless travel experiences tailored to your unique needs.</li>
-                <li>Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of.</li>
-                <li>From flight bookings to accommodations and curated tour packages, we offer a one-stop solution for all your travel needs.</li>
-                <li>Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability.</li>
-                <li>At Easy Travel, we believe that every journey should be as memorable as the destination itself.</li>
-                <li>Let us take the stress out of planning so you can focus on creating unforgettable memories.</li>
-                <li>Your adventure begins with us!</li>
+            <li>Easy Travel is dedicated to making your travel dreams a reality.</li>
+            <li>With a passion for exploration and a commitment to excellence, we provide seamless travel experiences tailored to your unique needs.</li>
+            <li>Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of.</li>
+            <li>From flight bookings to accommodations and curated tour packages, we offer a one-stop solution for all your travel needs.</li>
+            <li>Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability.</li>
+            <li>At Easy Travel, we believe that every journey should be as memorable as the destination itself.</li>
+            <li>Let us take the stress out of planning so you can focus on creating unforgettable memories.</li>
+            <li>Your adventure begins with us!</li>
             </ul>
             Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of. From flight bookings to accommodations and curated tour packages,
             we offer a one-stop solution for all your travel needs. Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability. At Easy Travel,
@@ -76,7 +77,7 @@
     </div>
 </section>
 
-<footer class="container-fluid" style="background-color: purple; color: white; padding: 20px 0;">
+<footer class="container-fluid" style="background-color: purple; color: white; padding: 20px 0; position: relative;">
     <div class="row">
         <div class="col-12 text-center">
             <div class="social-icons">
@@ -99,6 +100,18 @@
         <div class="col-12 text-center">
             <p>© 2025 Easy Travel. All Rights Reserved.</p>
         </div>
+    </div>
+    <!-- ABTA Number on the left -->
+    <div class="atol-abta" style="position: absolute; bottom: 10px; left: 10px;">
+        <p style="margin: 0; font-size: 14px;">
+            <i class="fas fa-shield-alt" style="margin-right: 5px;"></i> ABTA No: 56453
+        </p>
+    </div>
+    <!-- ATOL Number on the right -->
+    <div class="atol-abta" style="position: absolute; bottom: 10px; right: 10px;">
+        <p style="margin: 0; font-size: 14px;">
+            <i class="fas fa-plane" style="margin-right: 5px;"></i> ATOL No: 24536
+        </p>
     </div>
 </footer>
 
