--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1 class="display-4" style="color: red; font-weight: bold" ;>Welcome to Easy Travel</h1>
             <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you a great service.
             </p>
-            <p class="lead" style="color: rebeccapurple; font-weight: bold;">For Reservation, please viste our Reservations page
+            <p class="lead" style="color: rebeccapurple; font-weight: bold;">For Booking, please viste our Reservations page
             </p>
             <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
         </div>
