--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         style="height: 100vh; background: url('assets/images/beautiful\ travel.png') no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold" ;>Welcome to Easy Travel</h1>
-            <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you a great service.
+            <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you an Excellent service.
             </p>
             <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
         </div>
