--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
         </div>
     </nav>
 
+    <!-- Add this after the navbar, before the header section -->
+    <div class="container my-4">
+        <form>
+            <div class="mb-3">
+                <label for="fromAirport" class="form-label" style="color: purple; font-weight: bold;">From:</label>
+                <select id="fromAirport" class="form-select">
+                    <!-- Options will be populated by JavaScript -->
+                </select>
+            </div>
+        </form>
+    </div>
+
     <!--header section!-->
     <section class="d-flex justify-content-center align-items-center text-center"
         style="height: 100vh; background: url('assets/images/beautiful\ travel.png') no-repeat center center; background-size: cover;">
@@ -196,6 +208,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
+    <script>
+document.addEventListener('DOMContentLoaded', function() {
+    // List of all London airports
+    const londonAirports = [
+        { code: "LHR", name: "London Heathrow (LHR)" },
+        { code: "LGW", name: "London Gatwick (LGW)" },
+        { code: "LCY", name: "London City (LCY)" },
+        { code: "LTN", name: "London Luton (LTN)" },
+        { code: "STN", name: "London Stansted (STN)" },
+        { code: "SEN", name: "London Southend (SEN)" }
+    ];
+
+    const fromAirportSelect = document.getElementById('fromAirport');
+    londonAirports.forEach(airport => {
+        const option = document.createElement('option');
+        option.value = airport.code;
+        option.textContent = airport.name;
+        fromAirportSelect.appendChild(option);
+    });
+});
+</script>
 </body>
 
 </html>
