--- a/about.html
+++ b/about.html
@@ -13,111 +13,144 @@
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <style>
+        html,
+        body {
+            max-width: 100vw;
+            overflow-x: hidden !important;
+        }
+
+        body {
+            box-sizing: border-box;
+        }
+
+        section,
+        footer,
+        nav,
+        .container,
+        .row,
+        .col-12 {
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <div class="container">
-        <a class="navbar-brand" href="#">
-            <img src="assets/images/logo-easy-travel.jpg" alt="Easy Travel Logo" width="30" height="30"
-                class="d-inline-block align-text-top">
-            <span style="color: purple;">Easy Travel</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="about.html">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="reservations.html">Reservations</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<section class="d-flex justify-content-center align-items-center text-center text-white"
-    style="height: 100vh; background: url('assets/images/nature.png') no-repeat center center; background-size: cover;">
-    <div>
-        <h1 class="display-4" style="color: red; font-weight: bold;">Welcome to Easy Travel</h1>
-        <p class="lead" style="color: red; font-weight: bold;">We create unforgettable travel experiences tailored to your dreams</p>
-        <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
-    </div>
-</section>
-
-<section id="about-us" class="py-5">
-    <div class="container">
-        <h2 class="text-center mb-5"><span style="color: purple;">About Us</span></h2>
-        <h3 class="text-center"><span style="color: purple;">We create unforgettable travel experiences tailored to your dreams</span></h3>
-        <p>
-            <ul>
-            <li>Easy Travel is dedicated to making your travel dreams a reality.</li>
-            <li>With a passion for exploration and a commitment to excellence, we provide seamless travel experiences tailored to your unique needs.</li>
-            <li>Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of.</li>
-            <li>From flight bookings to accommodations and curated tour packages, we offer a one-stop solution for all your travel needs.</li>
-            <li>Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability.</li>
-            <li>At Easy Travel, we believe that every journey should be as memorable as the destination itself.</li>
-            <li>Let us take the stress out of planning so you can focus on creating unforgettable memories.</li>
-            <li>Your adventure begins with us!</li>
-            </ul>
-            Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of. From flight bookings to accommodations and curated tour packages,
-            we offer a one-stop solution for all your travel needs. Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability. At Easy Travel,
-            we believe that every journey should be as memorable as the destination itself. Let us take the stress out of planning so you can focus on creating unforgettable memories. Your adventure begins with us!
-        </p>
-    </div>
-</section>
-
-<footer class="container-fluid" style="background-color: purple; color: white; padding: 20px 0; position: relative;">
-    <div class="row">
-        <div class="col-12 text-center">
-            <div class="social-icons">
-                <a href="https://facebook.com" target="_blank" title="Facebook" style="color: white; margin: 0 10px;">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="https://twitter.com" target="_blank" title="Twitter" style="color: white; margin: 0 10px;">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="https://linkedin.com" target="_blank" title="LinkedIn" style="color: white; margin: 0 10px;">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://x.com" target="_blank" title="X" style="color: white; margin: 0 10px;">
-                    <i class="fab fa-x"></i>
-                </a>
+<body style="overflow-x: hidden;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="assets/images/logo-easy-travel.jpg" alt="Easy Travel Logo" width="30" height="30"
+                    class="d-inline-block align-text-top">
+                <span style="color: purple;">Easy Travel</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="about.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="reservations.html">Reservations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12 text-center">
-            <p>© 2025 Easy Travel. All Rights Reserved.</p>
-        </div>
-    </div>
-    <!-- ABTA Number on the left -->
-    <div class="atol-abta" style="position: absolute; bottom: 10px; left: 10px;">
-        <p style="margin: 0; font-size: 14px;">
-            <i class="fas fa-shield-alt" style="margin-right: 5px;"></i> ABTA No: 56453
-        </p>
-    </div>
-    <!-- ATOL Number on the right -->
-    <div class="atol-abta" style="position: absolute; bottom: 10px; right: 10px;">
-        <p style="margin: 0; font-size: 14px;">
-            <i class="fas fa-plane" style="margin-right: 5px;"></i> ATOL No: 24536
-        </p>
-    </div>
-</footer>
+    </nav>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <section class="d-flex justify-content-center align-items-center text-center text-white"
+        style="height: 100vh; background: url('assets/images/nature.png') no-repeat center center; background-size: cover;">
+        <div>
+            <h1 class="display-4" style="color: red; font-weight: bold;">Welcome to Easy Travel</h1>
+            <p class="lead" style="color: red; font-weight: bold;">We create unforgettable travel experiences tailored
+                to your dreams</p>
+            <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
+        </div>
+    </section>
+
+    <section id="about-us" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5"><span style="color: purple;">About Us</span></h2>
+            <h3 class="text-center"><span style="color: purple;">We create unforgettable travel experiences tailored to
+                    your dreams</span></h3>
+            <p>
+            <ul>
+                <li>Easy Travel is dedicated to making your travel dreams a reality.</li>
+                <li>With a passion for exploration and a commitment to excellence, we provide seamless travel
+                    experiences tailored to your unique needs.</li>
+                <li>Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team
+                    ensures every detail is taken care of.</li>
+                <li>From flight bookings to accommodations and curated tour packages, we offer a one-stop solution for
+                    all your travel needs.</li>
+                <li>Our mission is to connect you with the world's most breathtaking destinations while ensuring
+                    comfort, convenience, and affordability.</li>
+                <li>At Easy Travel, we believe that every journey should be as memorable as the destination itself.</li>
+                <li>Let us take the stress out of planning so you can focus on creating unforgettable memories.</li>
+                <li>Your adventure begins with us!</li>
+            </ul>
+            Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures
+            every detail is taken care of. From flight bookings to accommodations and curated tour packages,
+            we offer a one-stop solution for all your travel needs. Our mission is to connect you with the world's most
+            breathtaking destinations while ensuring comfort, convenience, and affordability. At Easy Travel,
+            we believe that every journey should be as memorable as the destination itself. Let us take the stress out
+            of planning so you can focus on creating unforgettable memories. Your adventure begins with us!
+            </p>
+        </div>
+    </section>
+
+    <footer class="container-fluid"
+        style="background-color: purple; color: white; padding: 20px 0; position: relative;">
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="social-icons">
+                    <a href="https://facebook.com" target="_blank" title="Facebook"
+                        style="color: white; margin: 0 10px;">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://twitter.com" target="_blank" title="Twitter" style="color: white; margin: 0 10px;">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://linkedin.com" target="_blank" title="LinkedIn"
+                        style="color: white; margin: 0 10px;">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://x.com" target="_blank" title="X" style="color: white; margin: 0 10px;">
+                        <i class="fab fa-x"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>© 2025 Easy Travel. All Rights Reserved.</p>
+            </div>
+        </div>
+        <!-- ABTA Number on the left -->
+        <div class="atol-abta" style="position: absolute; bottom: 10px; left: 10px;">
+            <p style="margin: 0; font-size: 14px;">
+                <i class="fas fa-shield-alt" style="margin-right: 5px;"></i> ABTA No: 56453
+            </p>
+        </div>
+        <!-- ATOL Number on the right -->
+        <div class="atol-abta" style="position: absolute; bottom: 10px; right: 10px;">
+            <p style="margin: 0; font-size: 14px;">
+                <i class="fas fa-plane" style="margin-right: 5px;"></i> ATOL No: 24536
+            </p>
+        </div>
+    </footer>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
- </body>
- </html>
+</body>
+
+</html>
