updated the cards in the index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!--header section-->
     <section class="d-flex justify-content-center align-items-center text-center"
-        style="height: 70vh; background: url('assets/images/beautiful\ travel.png') no-repeat center center; background-size: cover;">
+        style="height: 70vh; background: url('assets/images/burj.jpg') no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold">Welcome to Easy Travel</h1>
             <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you an Excellent service.</p>
@@ -62,22 +62,7 @@
     </section>
 
     <!--about us section-->
-    <section id="about" class="py-4">
-        <div class="container">
-            <h2 class="text-center mb-4"><span style="color: purple;">About Us</span></h2>
-            <p style="color: purple;">Easy Travel is dedicated to making your travel dreams a reality. With a passion for exploration and a
-            commitment to excellence,
-            we provide seamless travel experiences tailored to your unique needs. Whether you're planning a relaxing
-            getaway, an adventurous journey,
-            or a business trip, our team ensures every detail is taken care of. From flight bookings to
-            accommodations and curated tour packages,
-            we offer a one-stop solution for all your travel needs. Our mission is to connect you with the world's
-            most breathtaking destinations while ensuring comfort,
-            convenience, and affordability. At Easy Travel, we believe that every journey should be as memorable as
-            the destination itself. Let us take the stress out of planning
-            so you can focus on creating unforgettable memories. Your adventure begins with us!</p>
-        </div>
-    </section>
+    
 
     <!--services section-->
     <section class="py-4">
@@ -86,18 +71,27 @@
             <div class="row">
                 <div class="col-md-3 mb-3">
                     <div class="card p-3" style="min-height: 200px;">
+                        <div class="text-center mb-2">
+                            <i class="fas fa-plane-departure fa-2x" style="color: purple;"></i>
+                        </div>
                         <h5 class="card-title">Flight Booking</h5>
                         <p class="card-text">Book flights to your favorite destinations with ease.</p>
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
                     <div class="card p-3" style="min-height: 200px;">
+                        <div class="text-center mb-2">
+                            <i class="fas fa-hotel fa-2x" style="color: purple;"></i>
+                        </div>
                         <h5 class="card-title">Accommodation</h5>
                         <p class="card-text">Find and book the best hotels at affordable prices.</p>
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
                     <div class="card p-3" style="min-height: 200px;">
+                        <div class="text-center mb-2">
+                            <i class="fas fa-suitcase-rolling fa-2x" style="color: purple;"></i>
+                        </div>
                         <h5 class="card-title">Tour Package</h5>
                         <p class="card-text">Explore our curated tour packages for unforgettable experiences, please
                             call 08002653595 for a quote</p>
@@ -105,6 +99,9 @@
                 </div>
                 <div class="col-md-3 mb-3">
                     <div class="card p-3" style="min-height: 200px;">
+                        <div class="text-center mb-2">
+                            <i class="fas fa-shield-alt fa-2x" style="color: purple;"></i>
+                        </div>
                         <h5 class="card-title">Travel Insurance</h5>
                         <p class="card-text">Secure your trips with our comprehensive travel insurance plans, please
                             call 08002653595 for a quote</p>
@@ -114,12 +111,7 @@
         </div>
     </section>
     
-    <section id="summer-holiday" class="d-flex justify-content-center align-items-center text-center text-white"
-        style="height: 60vh; background: url('assets/images/summer.jpg') no-repeat center center; background-size: cover;">
-        <div>
-            <h1 class="display-4">Summer Holiday</h1>
-        </div>
-    </section>
+  
 
     <!--section testimonial-->
     <section class="py-4">
