Updated the about us page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         style="height: 70vh; background: url('assets/images/burj.jpg') no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold">Welcome to Easy Travel</h1>
-            <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you an Excellent service.</p>
-            <p class="lead" style="color: rebeccapurple; font-weight: bold;">For Bookings, please viste our Reservations page</p>
+            <p class="lead" style="color: orangered; font-weight: bold;">We are here to offer you an Excellent service.</p>
+            <p class="lead" style="color: orangered; font-weight: bold;">For Bookings, please viste our Reservations page</p>
             <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
         </div>
     </section>
