updated all pages

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
     </style>
 </head>
 
-<body style="overflow-x: hidden;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top w-100">
+<body style="overflow-x: hidden; width: 100vw; margin: 0; padding: 0;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo-easy-travel.jpg" alt="Easy Travel Logo" width="30" height="30"
@@ -111,15 +111,39 @@
                         <li>Let us take the stress out of planning so you can focus on creating unforgettable memories.</li>
                         <li>Your adventure begins with us!</li>
                     </ul>
-                    <p>
-                        Whether you're planning a relaxing getaway, an adventurous journey, or a business trip, our team ensures every detail is taken care of. From flight bookings to accommodations and curated tour packages,
-                        we offer a one-stop solution for all your travel needs. Our mission is to connect you with the world's most breathtaking destinations while ensuring comfort, convenience, and affordability. At Easy Travel,
-                        we believe that every journey should be as memorable as the destination itself. Let us take the stress out of planning so you can focus on creating unforgettable memories. Your adventure begins with us!
-                    </p>
+                  
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Summer and Nature Card Section (side by side) -->
+    <div class="container mb-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-5 mb-4 mb-md-0">
+                <div class="card shadow h-100">
+                    <img src="assets/images/summer.jpg" class="card-img-top" alt="Summer Travel" style="height: 250px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: purple;">Enjoy Your Summer With Us!</h5>
+                        <p class="card-text">
+                            Make this summer unforgettable with Easy Travel. Whether you dream of relaxing on sun-kissed beaches, exploring vibrant cities, or embarking on thrilling adventures, our summer packages are designed for every traveler. Let us handle the details while you soak up the sun and create lasting memories.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-5">
+                <div class="card shadow h-100">
+                    <img src="assets/images/never.gif" class="card-img-top" alt="Nature Travel" style="height: 250px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: purple;">Reconnect With Nature</h5>
+                        <p class="card-text">
+                            Discover breathtaking landscapes and serene escapes with Easy Travel’s nature packages. From lush forests to majestic mountains, our curated trips let you experience the beauty and tranquility of the natural world. Let us guide you to your next adventure in nature!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="container-fluid p-0 m-0" style="background-color: purple; color: white; position: relative; width: 100%;">
         <div class="py-4">
