--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <!--body elements section-->
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<body style="overflow-x: hidden; width: 100vw; margin: 0; padding: 0;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo-easy-travel.jpg" alt="Easy Travel Logo" width="30" height="30"
@@ -52,7 +52,7 @@
 
     <!--header section-->
     <section class="d-flex justify-content-center align-items-center text-center"
-        style="height: 70vh; background: url('assets/images/burj.jpg') no-repeat center center; background-size: cover;">
+        style="height: 200vh; background: url('assets/images/solo.png') no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold">Welcome to Easy Travel</h1>
             <p class="lead" style="color: orangered; font-weight: bold;">We are here to offer you an Excellent service.</p>
