--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2 class="text-center mb-4"><span style="color: purple;">Our Services</span></h2>
             <div class="row">
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3" style="min-height: 200px;">
+                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-plane-departure fa-2x" style="color: purple;"></i>
                         </div>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3" style="min-height: 200px;">
+                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-hotel fa-2x" style="color: purple;"></i>
                         </div>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3" style="min-height: 200px;">
+                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-suitcase-rolling fa-2x" style="color: purple;"></i>
                         </div>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3" style="min-height: 200px;">
+                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-shield-alt fa-2x" style="color: purple;"></i>
                         </div>
